--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="parallax/parallax.js"></script>
 </head>
 <body>
 
@@ -27,7 +29,7 @@
     </div>
   </div>
 
-  <div class="intro">
+  <div class="intro parallax-window" data-parallax="scroll" data-image-src="img/bg.jpg">
     <div class="wrapper">
       <h1>Изготовление печатей и штампов в Москве</h1>
     </div>
