--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div class="wrapper">
     <div id="contact" class="contact">
       <div class="map">
-        <img src="https://static-maps.yandex.ru/1.x/?ll=37.677751,55.757718&spn=0.016457,0.00619&l=map" alt="map">
+        <p><img src="https://static-maps.yandex.ru/1.x/?ll=37.677751,55.757718&spn=0.016457,0.00619&l=map" alt="map"></p>
       </div>
       <div class="contact-address">
         <p>г. Москва</p>
